// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoneyCards Component should render correctly 1`] = `
<View
  className="abc"
  creditCardList={Immutable.List []}
  labels={
    Object {
      "creditCardHeading": "heading",
    }
  }
>
  <Styled(Text) />
  <Styled(View)>
    <Styled(View)>
      <Styled(Image)
        source={
          Object {
            "testUri": "../../../src/assets/images/credit-card.png",
          }
        }
      />
    </Styled(View)>
    <Styled(Text) />
  </Styled(View)>
  <Styled(Text) />
  <Styled(View)>
    <Styled(CustomButton)
      buttonVariation="variable-width"
      customStyle=""
      fullWidth=""
      text=""
      url=""
    />
  </Styled(View)>
</View>
`;

exports[`MoneyCards Component should render correctly if list is present 1`] = `
<View
  className="abc"
  creditCardList={
    Immutable.List [
      Object {
        "accountNo": "************1111",
        "addressDetails": Object {
          "addressLine1": "111 3rd Ave",
          "addressLine2": "",
          "city": "New York",
          "country": "US",
          "firstName": "new",
          "lastName": "address",
          "phone1": "9878909876",
          "state": "NY",
          "zipCode": "10003",
        },
        "billingAddressId": 160685,
        "ccBrand": "Visa",
        "ccType": "COMPASSVISA",
        "creditCardId": 73501,
        "defaultInd": false,
        "expMonth": "5 ",
        "expYear": "2024",
        "nameOnAccount": ".",
        "properties": null,
      },
    ]
  }
  labels={
    Object {
      "creditCardHeading": "heading",
    }
  }
>
  <Styled(Text) />
  <Styled(View)>
    <Styled(CustomButton)
      buttonVariation="variable-width"
      customStyle=""
      fullWidth=""
      text=""
      url=""
    />
  </Styled(View)>
  <CardTile
    card={
      Object {
        "accountNo": "************1111",
        "addressDetails": Object {
          "addressLine1": "111 3rd Ave",
          "addressLine2": "",
          "city": "New York",
          "country": "US",
          "firstName": "new",
          "lastName": "address",
          "phone1": "9878909876",
          "state": "NY",
          "zipCode": "10003",
        },
        "billingAddressId": 160685,
        "ccBrand": "Visa",
        "ccType": "COMPASSVISA",
        "creditCardId": 73501,
        "defaultInd": false,
        "expMonth": "5 ",
        "expYear": "2024",
        "nameOnAccount": ".",
        "properties": null,
      }
    }
    labels={
      Object {
        "creditCardHeading": "heading",
      }
    }
  />
</View>
`;
